--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=8000
-DATABASE_URL=postgresql://restaurantAPI_owner:RYQWomlO4r0H@ep-divine-recipe-a5fioj10.us-east-2.aws.neon.tech/Todos-%28RTQ%29?sslmode=require
+DATABASE_URL=postgresql://restaurantAPI_owner:RYQWomlO4r0H@ep-divine-recipe-a5fioj10.us-east-2.aws.neon.tech/todo?sslmode=require
 JWT_SECRET=secret
